# loggy

./: CMakeLists.txt  README.md  main.c  main.cpp
cmake/modules/: FindWindowsSDK.cmake
include/: core.h  externals.h  json_writer.h  keylogger.h  types.h
include/keystroke/: keylogger.h  keystroke.h
src/: core.cpp  keylogger.c  linux.c  mac.c  windows.c  windows.cpp
src/common/: json_writer.cpp
src/keystroke/: keylogger.c
